tests/macro-tests/cases/widget_new/malformed_property_attribute.stderr
error: an inner attribute is not permitted in this context
 --> cases/widget_new/malformed_property_attribute.rs:7:9
  |
7 |         #![allow(inner_attribute)]
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files
  = note: outer attributes, like `#[test]`, annotate the item following them

error: expected identifier, found `!`
 --> cases/widget_new/malformed_property_attribute.rs:8:11
  |
8 |         #[!foo]
  |           ^ expected identifier
  |
 ::: $WORKSPACE/crates/zng-wgt-button/src/lib.rs
  |
  | #[widget($crate::Button { ($cmd:expr) => { cmd = $cmd; }; })]
  |                            --------- while parsing argument for this `expr` macro fragment

warning: unused import: `layout::margin`
 --> cases/widget_new/malformed_property_attribute.rs:1:32
  |
1 | use zng::{APP, button::Button, layout::margin};
  |                                ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
